[gd_scene load_steps=9 format=3 uid="uid://fkfe0f26w8mo"]

[ext_resource type="PackedScene" uid="uid://b2h1an7m2wksx" path="res://environment.tscn" id="1_1t31i"]
[ext_resource type="Script" path="res://world.gd" id="1_ot0da"]
[ext_resource type="Texture2D" uid="uid://vg27jn1rdqfy" path="res://addons/kenney_particle_pack/magic_03.png" id="3_3iaj5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ihwpx"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_i8sse"]
sky_material = SubResource("ProceduralSkyMaterial_ihwpx")

[sub_resource type="Environment" id="Environment_xyu5k"]
background_mode = 2
sky = SubResource("Sky_i8sse")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8lqyy"]
bg_color = Color(0.65098, 0.278431, 0.254902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2yku7"]
bg_color = Color(0.262745, 0.498039, 0.188235, 1)

[node name="World" type="Node3D"]
script = ExtResource("1_ot0da")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xyu5k")

[node name="Environment" parent="." instance=ExtResource("1_1t31i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.98738, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main Menu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 383.0
offset_top = 233.0
offset_right = -382.0
offset_bottom = -233.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main Menu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main Menu/MarginContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="Hud" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Hud"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(576, 324)
texture = ExtResource("3_3iaj5")
stretch_mode = 5

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/Hud"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 590.0
offset_right = -894.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_8lqyy")
theme_override_styles/fill = SubResource("StyleBoxFlat_2yku7")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/Main Menu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
